Add functional tests for ACAS certificate retrieval and refactor Acas… (#2711)
* Add functional tests for ACAS certificate retrieval and refactor AcasService to use WebClient

* Update et-data-model dependency to version 4.2.7

* Add additional Netty dependencies for enhanced DNS support